<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_label">Bill</string>
    <string name="guest_label">People</string>
    <string name="tip_label">Tip</string>
    <string name="newsFeed">Enter a Bill Amount</string>
    <string name="totalTip">Total Tip</string>
    <string name="totalBill">Total Bill(Includes Tip)</string>
    <string name="tipPerGuest">Tip Per Guest</string>
    <string name="totalCostPerGuest">Cost Per Guest(Includes Tip)</string>

</resources>
