<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/userInputLayout"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/billLabel"
            android:text="@string/bill_label"
            android:theme="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/billUser"
            android:layout_toRightOf="@+id/billLabel"
            android:layout_alignBottom="@id/billLabel"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tipLabel"
            android:text="@string/tip_label"
            android:theme="@style/labelStyle"
            android:layout_below="@+id/billLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tipUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/guestLabel"
            android:layout_toEndOf="@+id/tipLabel"
            android:layout_toRightOf="@+id/tipLabel"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/guestLabel"
            android:text="@string/guest_label"
            android:theme="@style/labelStyle"
            android:layout_below="@+id/tipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/guestUser"
            android:layout_toRightOf="@+id/guestLabel"
            android:layout_alignBottom="@id/guestLabel"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <View
        android:id="@+id/seperator"
        android:paddingTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/userInputLayout"
        android:layout_width="match_parent"
        android:layout_height="4dp"
    />

    <!--Start of Result Calculations-->

    <GridLayout
        android:columnCount="4"
        android:layout_below="@id/seperator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/totalTipLabel"
            android:text="@string/totalTip"
            android:theme="@style/resultLabel"
            />

        <TextView
            android:id="@+id/totalTipDisplay"
            android:theme="@style/resultLabel"
            />

        <TextView
            android:id="@+id/totalBillLabel"
            android:text="@string/totalBill"
            android:theme="@style/resultLabel"
            />

        <TextView
            android:id="@+id/totalBillDisplay"
            android:theme="@style/resultLabel"
             />

        <TextView
            android:id="@+id/tipPerGuestLabel"
            android:text="@string/tipPerGuest"
            android:theme="@style/resultLabel"
             />

        <TextView
            android:id="@+id/tipPerGuestDisplay"
            android:theme="@style/resultLabel"
             />

        <TextView
            android:id="@+id/amountPerGuestLabel"
            android:text="@string/totalCostPerGuest"
            android:theme="@style/resultLabel"
             />

        <TextView
            android:id="@+id/amountPerGuestDisplay"
            android:theme="@style/resultLabel"
             />

    </GridLayout>





</RelativeLayout>